--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
 
+<html>
+
+    <head>
+        <title>CSCE 190: MATT SUCATO</title>
+    </head>
+
+    <body>
+        <h1>MATT SUCATO</h1>
+        <P> Computer Science Major </P>
+    </body>
+
+</html>
