--- a/index.html
+++ b/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 
 <html>
-
     <head>
-        <title>CSCE 190: MATT SUCATO</title>
+        <title>CSCE 190: Matt Sucato</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
-
     <body>
-        <h1>MATT SUCATO</h1>
-        <P> Computer Science Major </P>
+        <h1>Matt Sucato</h1>
+            <p>This page is for CSCE 190</p>
+        <div class="about">
+            <h2>About me</h2>
+            <p>[My mission at the University of South Carolina is to do my best in every part of college. 
+                I want to work hard in my classes, get involved on campus, meet new people, and grow as a person. 
+                I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here. 
+                I want to leave USC proud of what I accomplished and ready for what comes next.]</p>
+        </div>
+        <div class="skills">
+            <h2>Skills</h2>
+        </div>
+        <div class="projects">
+            <h2>Highlighted projects</h2>
+        </div>
+        <div class="contact">
+            <h2>Contact me!
+                202-878-0728
+                msucato@email.sc.edu </h2>
+        </div>
     </body>
-
 </html>
 
-<body>
-    <h1>[your name]</h1>
-    <div class="about"><h2>About me</h2><p>[mission statement]</p></div>
-    <div class="skills"><h2>Skills</h2></div>
-    <div class="projects"><h2>Highlighted projects</h2></div>
-    <div class="contact"><h2>Contact me</h2></div>
-</body>
 
