--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
         </div>
         <div class="projects">
             <h2>Highlighted projects</h2>
+
+        <section class="project">
+            <a href="files/statement.pdf">
+                <h3>Problem Statement</h3>
+            </a><a href="files/statement.pdf">
+                <img src="images/problem.png"></a>
+                    <p>USC Students need a better way to tell when Dining Hall sections 
+                        close and open. Not just when the door to the building closes, 
+                        but when the individual sections close.</p>
+    </section>
         </div>
         <div class="contact">
             <h2>Contact me!
