--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="skills">
             <h2>Skills</h2>
         </div>
+        
         <div class="projects">
             <h2>Highlighted projects</h2>
 
-        <section class="project">
+    <div class="project">
+        <section class = "projects">
             <a href="files/statement.pdf">
                 <h3>Problem Statement</h3>
             </a><a href="files/statement.pdf">
@@ -29,8 +31,8 @@
                     <p>USC Students need a better way to tell when Dining Hall sections 
                         close and open. Not just when the door to the building closes, 
                         but when the individual sections close.</p>
-    </section>
-        </div>
+                    </section>
+    </div>
         <div class="contact">
             <h2>Contact me!
                 202-878-0728
