--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 
     <div class="project">
         <section class = "projects">
-            <a href="files/statement.pdf">
+
+            <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
                 <h3>Problem Statement</h3>
-            </a><a href="files/statement.pdf">
-                <img src="images/problem.png"></a>
+
+            </a><a href="Files/Screenshot 2025-10-13 122202.png">
+                <img src="images/Sketchesreal+(1)+(1).pdf"></a>
                     <p>USC Students need a better way to tell when Dining Hall sections 
                         close and open. Not just when the door to the building closes, 
                         but when the individual sections close.</p>
