--- a/index.html
+++ b/index.html
@@ -1,47 +1,60 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>CSCE 190: Matt Sucato</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1>Matt Sucato</h1>
-            <p>This page is for CSCE 190</p>
-        <div class="about">
-            <h2>About me</h2>
-            <p>[My mission at the University of South Carolina is to do my best in every part of college. 
-                I want to work hard in my classes, get involved on campus, meet new people, and grow as a person. 
-                I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here. 
-                I want to leave USC proud of what I accomplished and ready for what comes next.]</p>
-        </div>
-        <div class="skills">
-            <h2>Skills</h2>
-        </div>
-        
-        <div class="projects">
-            <h2>Highlighted projects</h2>
+<head>
+  <title>CSCE 190: Matt Sucato</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <h1>Matt Sucato</h1>
+  <p>This page is for CSCE 190</p>
 
-    <div class="project">
-        <section class = "projects">
+  <div class="about">
+    <h2>About me</h2>
+    <p>
+      My mission at the University of South Carolina is to do my best in every part of college.
+      I want to work hard in my classes, get involved on campus, meet new people, and grow as a person.
+      I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here.
+      I want to leave USC proud of what I accomplished and ready for what comes next!
+    </p>
+  </div>
 
-            <a href="Files/Screenshot 2025-10-13 122202.png">
-                <h3>Problem Statement</h3>
-                
+  <div class="skills">
+    <h2>Skills</h2>
+  </div>
 
-            </a><a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
-                <img src="images/Sketchesreal+(1)+(1).pdf"></a>
-                    <p>USC Students need a better way to tell when Dining Hall sections 
-                        close and open. Not just when the door to the building closes, 
-                        but when the individual sections close.</p>
-                    </section>
-    </div>
-        <div class="contact">
-            <h2>Contact me!
-                202-878-0728
-                msucato@email.sc.edu </h2>
-        </div>
-    </body>
+  <div class="projects">
+    <h2>Highlighted Projects</h2>
+
+    <section class="project">
+      <h3>Problem Statement</h3>
+      <a href="Files/Screenshot 2025-10-13 122202.png">
+        <img src="Files/Screenshot 2025-10-13 122202.png" alt="Problem Statement Screenshot">
+      </a>
+      <p>USC Students need a better way to tell when Dining Hall sections close and open. 
+        Not just when the door to the building closes, but when the individual sections close.</p>
+    </section>
+
+    <section class="project">
+      <h3>Second Image</h3>
+      <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
+        <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Second Screenshot">
+      </a>
+    </section>
+
+    <section class="project">
+      <h3>Sketch Image</h3>
+      <a href="images/Sketchesreal+(1)+(1).png">
+        <img src="images/Sketchesreal+(1)+(1).png" alt="Sketch Image">
+      </a>
+    </section>
+  </div>
+
+  <div class="contact">
+    <h2>Contact me!</h2>
+    <p>202-878-0728<br>msucato@email.sc.edu</p>
+  </div>
+</body>
 </html>
+
 
 
