--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
   <div class="projects">
     <h2>Highlighted Projects</h2>
 
-    <section class="project">
-      <h3>Problem Statement</h3>
-      <a href="Files/Screenshot 2025-10-13 122202.png">
-        <img src="Files/Screenshot 2025-10-13 122202.png" alt="Problem Statement Screenshot">
-      </a>
-      <p>USC Students need a better way to tell when Dining Hall sections close and open. 
-        Not just when the door to the building closes, but when the individual sections close.</p>
-    </section>
+    <div class="project-gallery">
+      <div class="project">
+        <a href="Files/Screenshot 2025-10-13 122202.png">
+          <img src="Files/Screenshot 2025-10-13 122202.png" alt="Problem Statement Screenshot">
+        </a>
+        <p>Dining Hall problem statement.</p>
+      </div>
 
-    <section class="project">
-      <h3>Second Image</h3>
-      <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
-        <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Second Screenshot">
-      </a>
-    </section>
+      <div class="project">
+        <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
+          <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Second Screenshot">
+        </a>
+        <p>Second project screenshot.</p>
+      </div>
 
-    <section class="project">
-      <h3>Sketch Image</h3>
-      <a href="images/Sketchesreal+(1)+(1).png">
-        <img src="images/Sketchesreal+(1)+(1).png" alt="Sketch Image">
-      </a>
-    </section>
+      <div class="project">
+        <a href="images/Sketchesreal+(1)+(1).png">
+          <img src="images/Sketchesreal+(1)+(1).png" alt="Sketch Image">
+        </a>
+        <p>Sketches of the design concept.</p>
+      </div>
+    </div>
   </div>
 
   <div class="contact">
