--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
       <div class="project">
         <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
-          <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Second Screenshot">
+          <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Second Screenshot" class="medium-img"> 
+
+
         </a>
         <p>Second project screenshot.</p>
       </div>
