--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         </a>
-        <p>Second project screenshot.</p>
+        <p>Affinity Diagram.</p>
       </div>
 
       <div class="project">
