--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="project-gallery">
       <div class="project">
         <a href="Files/Screenshot 2025-10-13 122202.png">
-          <img src="Files/Screenshot 2025-10-13 122202.png" alt="Problem Statement Screenshot" class="medium-img">
+          <img src="Files/Screenshot 2025-10-13 122202.png" alt="Problem Statement Screenshot">
         </a>
         <p>Dining Hall problem statement.</p>
       </div>
