--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
 
       <div class="project">
-        <a href="images/Sketchesreal+(1)+(1).png">
-          <img src="images/Sketchesreal+(1)+(1).png" alt="Sketch Image">
+        <a href="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png">
+           <img src="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png" alt="Screenshot 6.23.36 PM">
         </a>
         <p>Sketches of the design concept.</p>
       </div>
