--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>CSCE 190: Matt Sucato</title>
@@ -25,97 +26,12 @@
     <section class="skills">
       <h2>Skills</h2>
 
-      <!-- Resume HTML included directly under Skills -->
-      <div class="resume-block">
-
-        <!-- Top row: name + contact -->
-        <div class="resume-header">
-          <h3 class="name">Matthew Sucato</h3>
-          <div class="contact">
-            <div>📞 (202) 878-0728</div>
-            <div>✉️ <a href="mailto:matthewsucato11@gmail.com">matthewsucato11@gmail.com</a></div>
-          </div>
-        </div>
-
-        <!-- PDF link -->
-        <div class="resume-links">
-          <a class="pdf-link" href="Files/Resume (3).pdf" target="_blank" rel="noopener noreferrer">Open PDF version</a>
-          <span class="divider">|</span>
-          <a class="html-link" href="#resume-html">View HTML resume on this page</a>
-        </div>
-
-        <!-- HTML resume content (semantic) -->
-        <article id="resume-html" class="resume">
-          <header class="resume-intro">
-            <p class="role">Computer Science Major — University of South Carolina</p>
-            <p class="location">Columbia, SC</p>
-          </header>
-
-          <div class="resume-grid">
-            <div class="col left-col">
-              <h4 class="section-title">Experience</h4>
-
-              <div class="section-item">
-                <strong>Phi Gamma Delta — Committee Head / Marketing Chair</strong>
-                <div class="item-meta">Oct 2025 – Present</div>
-                <p class="item-desc">Managing a committee of 26 people by directing event promotions, branding strategies, social media outreach and digital campaigns that strengthened fraternity presence and recruitment on campus.</p>
-              </div>
-
-              <div class="section-item">
-                <strong>SucatoStudios — Owner / Founder</strong>
-                <div class="item-meta">June 2022 – Present</div>
-                <p class="item-desc">Founded and operate a graphic design business specializing in commitment announcement graphics for student-athletes, managing creative design and client relations.</p>
-              </div>
-
-              <div class="section-item">
-                <strong>Bethesda Lacrosse Club — Assistant Coach</strong>
-                <div class="item-meta">June 2023 – Aug 2024</div>
-                <p class="item-desc">Coached and mentored youth players, developing skills, teamwork, and sportsmanship.</p>
-              </div>
-            </div>
-
-            <div class="col right-col">
-              <h4 class="section-title">Education</h4>
-
-              <div class="section-item">
-                <strong>University of South Carolina</strong>
-                <div class="item-meta">Sep 2025 – May 2029</div>
-                <p class="item-desc">Molinaroli College of Engineering and Computing — Computer Science</p>
-              </div>
-
-              <div class="section-item">
-                <strong>Gonzaga College High School</strong>
-                <div class="item-meta">Aug 2021 – May 2025</div>
-                <p class="item-desc">High school diploma</p>
-              </div>
-
-              <h4 class="section-title">Skills & Languages</h4>
-              <ul class="skills-list">
-                <li>Java, Python, HTML/CSS</li>
-                <li>Photoshop (5+ years)</li>
-                <li>Leadership, Communication, Time management</li>
-                <li>Creativity, Organization</li>
-              </ul>
-            </div>
-          </div> <!-- /.resume-grid -->
-
-          <h4 class="section-title">Volunteering</h4>
-          <ul class="vol-list">
-            <li>Father McKenna Center — Food Server (2021–2025)</li>
-            <li>Best Buddies International — Volunteer (2025)</li>
-            <li>Wreaths Across America — Volunteer (2024)</li>
-            <li>Little Friends for Peace — Volunteer (2024)</li>
-            <li>SOME (So Others May Eat) — Volunteer (2022)</li>
-          </ul>
-
-          <footer class="resume-footer">
-            <em>Phi Gamma Delta — Active Member</em>
-          </footer>
-        </article>
-        <!-- end resume -->
-
+      <!-- Resume links (instead of embedding it here) -->
+      <div class="resume-links">
+        <a class="pdf-link" href="Files/Resume (3).pdf" target="_blank">Open PDF Resume</a>
+        <span class="divider">|</span>
+        <a class="html-link" href="resume.html">View HTML Resume</a>
       </div>
-      <!-- end resume-block -->
 
     </section>
 
