--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <section class="contact">
       <h2>Contact me</h2>
-      <p>Phone: (202) 878-0728<br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
+      <p><br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
     </section>
 
     <footer class="site-footer">
