resume update final

--- a/resume.html
+++ b/resume.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
 <head>
-  <meta charset="utf-8">
-  <title>Resume — Matt Sucato</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <title>Resume - Matt Sucato</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
   <main class="container">
-
     <header class="site-header">
       <h1>Resume — Matt Sucato</h1>
-      <p><a href="index.html">← Back to Home</a></p>
+      <p><a href="index.html">Back to Home</a></p>
     </header>
 
     <div class="resume-block">
-
       <div class="resume-header">
         <h3 class="name">Matthew Sucato</h3>
         <div class="contact">
-          <div>✉️ <a href="mailto:matthewsucato11@gmail.com">matthewsucato11@gmail.com</a></div>
+          <div class="email">
+            <a href="mailto:matthewsucato11@gmail.com">matthewsucato11@gmail.com</a>
+          </div>
         </div>
       </div>
 
       <div class="resume-links">
-        <a class="pdf-link" href="Files/Resume (3).pdf" target="_blank">Download PDF Resume</a>
+        <!-- Update href to the actual path of your uploaded PDF if needed -->
+        <a class="pdf-link" href="Resume (5).pdf" target="_blank">Download PDF Resume</a>
       </div>
 
       <article class="resume">
@@ -35,26 +34,45 @@
         </header>
 
         <div class="resume-grid">
-
           <div class="col left-col">
             <h4 class="section-title">Experience</h4>
 
             <div class="section-item">
-              <strong>Phi Gamma Delta — Committee Head / Marketing Chair</strong>
-              <div class="item-meta">Oct 2025 – Present</div>
-              <p class="item-desc">Managing a committee of 26 people by directing event promotions, branding strategies, social media outreach and digital campaigns that strengthened fraternity presence and recruitment on campus.</p>
+              <strong>Phi Gamma Delta — Mu Lambda Chapter — Committee Head / Marketing Chair</strong>
+              <div class="item-meta">October 2025 - PRESENT</div>
+              <ul class="item-desc">
+                <li>Directed a 26-member team, delegating tasks and ensuring smooth execution of marketing operations.</li>
+                <li>Created and implemented branding strategies that elevated the fraternity’s visibility on campus.</li>
+                <li>Managed social media channels and produced digital campaigns that drove student engagement.</li>
+                <li>Designed and executed event promotion plans that supported increased recruitment interest.</li>
+              </ul>
             </div>
 
             <div class="section-item">
-              <strong>SucatoStudios — Owner / Founder</strong>
-              <div class="item-meta">June 2022 – Present</div>
-              <p class="item-desc">Founded and operate a graphic design business specializing in commitment announcement graphics for student-athletes, managing creative design and client relations.</p>
+              <strong>SucatoStudios — Owner/Founder</strong>
+              <div class="item-meta">June 2022 - PRESENT</div>
+              <ul class="item-desc">
+                <li>Founded and operating a graphic design business specializing in commitment announcements for student-athletes.</li>
+                <li>Managing all creative design, client relations, and social media promotion.</li>
+                <li>Designed graphics for student-athletes from across the United States and Canada.</li>
+              </ul>
             </div>
 
             <div class="section-item">
               <strong>Bethesda Lacrosse Club — Assistant Coach</strong>
-              <div class="item-meta">June 2023 – Aug 2024</div>
-              <p class="item-desc">Coached and mentored youth players, developing skills, teamwork, and sportsmanship.</p>
+              <div class="item-meta">June 2023 - August 2024</div>
+              <ul class="item-desc">
+                <li>Coached and mentored youth players, developing skills, teamwork, and sportsmanship throughout the summer season.</li>
+              </ul>
+            </div>
+
+            <div class="section-item">
+              <strong>Gonzaga College High School — Lacrosse Camp Counselor</strong>
+              <div class="item-meta">July 2024 - July 2025</div>
+              <ul class="item-desc">
+                <li>Helped teach young kids the basics of lacrosse and how to learn to love the game.</li>
+                <li>Introduced campers to Gonzaga and explained what it means to be in high school there.</li>
+              </ul>
             </div>
           </div>
 
@@ -62,26 +80,28 @@
             <h4 class="section-title">Education</h4>
 
             <div class="section-item">
-              <strong>University of South Carolina</strong>
-              <div class="item-meta">Sep 2025 – May 2029</div>
-              <p class="item-desc">Molinaroli College of Engineering and Computing — Computer Science</p>
+              <strong>University of South Carolina, Columbia, SC — Degree</strong>
+              <div class="item-meta">September 2025 - May 2029 (Expected)</div>
+              <p class="item-desc">Molinaroli College of Engineering and Computing</p>
+              <p class="item-desc">Phi Gamma Delta — Active Member</p>
             </div>
 
             <div class="section-item">
-              <strong>Gonzaga College High School</strong>
-              <div class="item-meta">Aug 2021 – May 2025</div>
+              <strong>Gonzaga College High School, Washington, D.C.</strong>
+              <div class="item-meta">August 2021 - May 2025</div>
               <p class="item-desc">High school diploma</p>
             </div>
 
             <h4 class="section-title">Skills & Languages</h4>
             <ul class="skills-list">
               <li>Java, Python, HTML/CSS</li>
-              <li>Photoshop (5+ years)</li>
-              <li>Leadership, Communication, Time management</li>
-              <li>Creativity, Organization</li>
+              <li>Photoshop (5+ years experience)</li>
+              <li>Leadership, communication, time management</li>
+              <li>Creativity, organization</li>
             </ul>
-          </div>
 
+            <p class="languages"><strong>Languages:</strong> English — Native</p>
+          </div>
         </div>
 
         <h4 class="section-title">Volunteering</h4>
@@ -94,17 +114,14 @@
         </ul>
 
         <footer class="resume-footer">
-          <em>Phi Gamma Delta — Active Member</em>
+          <p>Phi Gamma Delta — Active Member</p>
         </footer>
-
       </article>
-
     </div>
 
     <footer class="site-footer">
-      <p>© Matt Sucato</p>
+      <p>&copy; Matt Sucato</p>
     </footer>
-
   </main>
 </body>
 </html>
