--- a/resume.html
+++ b/resume.html
@@ -1,45 +1,51 @@
 <!doctype html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>Resume - Matt Sucato</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main class="container">
+
     <header class="site-header">
-      <h1>Resume — Matt Sucato</h1>
-      <p><a href="index.html">Back to Home</a></p>
+      <h1>Resume - Matt Sucato</h1>
+      <p><a class="back-link" href="index.html">Back to Home</a></p>
     </header>
 
     <div class="resume-block">
+
       <div class="resume-header">
         <h3 class="name">Matthew Sucato</h3>
         <div class="contact">
-          <div class="email">
-            <a href="mailto:matthewsucato11@gmail.com">matthewsucato11@gmail.com</a>
-          </div>
+          <a href="mailto:matthewsucato11@gmail.com">matthewsucato11@gmail.com</a>
         </div>
       </div>
 
       <div class="resume-links">
-        <!-- Update href to the actual path of your uploaded PDF if needed -->
-        <a class="pdf-link" href="Resume (5).pdf" target="_blank">Download PDF Resume</a>
+        <!-- Updated PDF Link -->
+        <a class="pdf-link" href="Files/Resume (5).pdf" target="_blank">Download PDF Resume</a>
       </div>
 
       <article class="resume">
+
         <header class="resume-intro">
           <p class="role">Computer Science Major — University of South Carolina</p>
           <p class="location">Columbia, SC</p>
         </header>
 
         <div class="resume-grid">
+
+          <!-- LEFT COLUMN -->
           <div class="col left-col">
             <h4 class="section-title">Experience</h4>
 
+            <!-- Experience Item 1 -->
             <div class="section-item">
               <strong>Phi Gamma Delta — Mu Lambda Chapter — Committee Head / Marketing Chair</strong>
-              <div class="item-meta">October 2025 - PRESENT</div>
+              <div class="item-meta">October 2025 – PRESENT</div>
               <ul class="item-desc">
                 <li>Directed a 26-member team, delegating tasks and ensuring smooth execution of marketing operations.</li>
                 <li>Created and implemented branding strategies that elevated the fraternity’s visibility on campus.</li>
@@ -48,51 +54,55 @@
               </ul>
             </div>
 
+            <!-- Experience Item 2 -->
             <div class="section-item">
               <strong>SucatoStudios — Owner/Founder</strong>
-              <div class="item-meta">June 2022 - PRESENT</div>
+              <div class="item-meta">June 2022 – PRESENT</div>
               <ul class="item-desc">
-                <li>Founded and operating a graphic design business specializing in commitment announcements for student-athletes.</li>
-                <li>Managing all creative design, client relations, and social media promotion.</li>
+                <li>Founded and operated a graphic design business specializing in commitment announcements for student-athletes.</li>
+                <li>Managed all creative design, client relations, and social media promotion.</li>
                 <li>Designed graphics for student-athletes from across the United States and Canada.</li>
               </ul>
             </div>
 
+            <!-- Experience Item 3 -->
             <div class="section-item">
               <strong>Bethesda Lacrosse Club — Assistant Coach</strong>
-              <div class="item-meta">June 2023 - August 2024</div>
+              <div class="item-meta">June 2023 – August 2024</div>
               <ul class="item-desc">
                 <li>Coached and mentored youth players, developing skills, teamwork, and sportsmanship throughout the summer season.</li>
               </ul>
             </div>
 
+            <!-- Experience Item 4 -->
             <div class="section-item">
               <strong>Gonzaga College High School — Lacrosse Camp Counselor</strong>
-              <div class="item-meta">July 2024 - July 2025</div>
+              <div class="item-meta">July 2024 – July 2025</div>
               <ul class="item-desc">
-                <li>Helped teach young kids the basics of lacrosse and how to learn to love the game.</li>
+                <li>Taught young kids the basics of lacrosse and how to learn to love the game.</li>
                 <li>Introduced campers to Gonzaga and explained what it means to be in high school there.</li>
               </ul>
             </div>
           </div>
 
+          <!-- RIGHT COLUMN -->
           <div class="col right-col">
             <h4 class="section-title">Education</h4>
 
             <div class="section-item">
               <strong>University of South Carolina, Columbia, SC — Degree</strong>
-              <div class="item-meta">September 2025 - May 2029 (Expected)</div>
+              <div class="item-meta">September 2025 – May 2029 (Expected)</div>
               <p class="item-desc">Molinaroli College of Engineering and Computing</p>
               <p class="item-desc">Phi Gamma Delta — Active Member</p>
             </div>
 
             <div class="section-item">
               <strong>Gonzaga College High School, Washington, D.C.</strong>
-              <div class="item-meta">August 2021 - May 2025</div>
+              <div class="item-meta">August 2021 – May 2025</div>
               <p class="item-desc">High school diploma</p>
             </div>
 
-            <h4 class="section-title">Skills & Languages</h4>
+            <h4 class="section-title">Skills &amp; Languages</h4>
             <ul class="skills-list">
               <li>Java, Python, HTML/CSS</li>
               <li>Photoshop (5+ years experience)</li>
@@ -116,12 +126,15 @@
         <footer class="resume-footer">
           <p>Phi Gamma Delta — Active Member</p>
         </footer>
+
       </article>
     </div>
 
     <footer class="site-footer">
       <p>&copy; Matt Sucato</p>
     </footer>
+
   </main>
 </body>
 </html>
+=
