--- a/index.html
+++ b/index.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>CSCE 190: Matt Sucato</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <title>CSE 190: Matt Sucato</title>
+    <meta name="viewport" content="width=device-width-width,initial-scale=1" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <main class="container">
-    <header class="site-header">
-      <h1>Matt Sucato</h1>
-    </header>
+<main class="container">
+<header class="site-header">
+    <h1>Matt Sucato</h1>
+</header>
 
-    <section class="about">
-      <h2>About me</h2>
-      <p>
-        My mission at the University of South Carolina is to do my best in every part of college.
-        I want to work hard in my classes, get involved on campus, meet new people, and grow as a person.
-        I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here.
-        I want to leave USC proud of what I accomplished and ready for what comes next!
-      </p>
-    </section>
+<section class="about">
+    <h2>About me</h2>
+    <p>
+    My mission at the University of South Carolina is to do my best in every part of college.  
+    I want to work hard in my classes, get involved on campus, meet new people, and grow as a person.  
+    I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here.  
+    I want to leave USC proud of what I accomplished and ready for what comes next!
+    </p>
+</section>
 
-    <section class="skills">
-      <h2>Skills</h2>
+<section class="skills">
+    <h2>Skills</h2>
 
-      <!-- Resume links (instead of embedding it here) -->
-      <div class="resume-links">
+    <!-- Resume links -->
+    <div class="resume-links">
         <a class="pdf-link" href="Files/Resume (5).pdf" target="_blank">Open PDF Resume</a>
         <span class="divider">|</span>
         <a class="html-link" href="resume.html">View HTML Resume</a>
-      </div>
+    </div>
+</section>
 
-    </section>
+<section class="projects">
+    <h2>Highlighted projects</h2>
 
-    <section class="projects">
-      <h2>Highlighted projects</h2>
+    <div class="project-gallery">
 
-      <div class="project-gallery">
         <div class="project">
-          <a href="Files/Screenshot 2025-10-13 122202.png">
-            <img src="Files/Screenshot 2025-10-13 122202.png" alt="Dining Hall problem statement">
-          </a>
-          <p>Dining Hall problem statement.</p>
+            <a href="Files/Screenshot 2025-10-13 122202.png">
+                <img src="Files/Screenshot 2025-10-13 122202.png" alt="Dining Hall problem statement">
+            </a>
+            <p>Dining Hall problem statement.</p>
         </div>
 
         <div class="project">
-          <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
-            <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Affinity diagram">
-          </a>
-          <p>Affinity Diagram.</p>
+            <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
+                <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Affinity diagram">
+            </a>
+            <p>Affinity Diagram.</p>
         </div>
 
         <div class="project">
-          <a href="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png">
-            <img src="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png" alt="Design sketches">
-          </a>
-          <p>Sketches of the design concept.</p>
+            <a href="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png">
+                <img src="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png" alt="Design sketches">
+            </a>
+            <p>Sketches of the design concept.</p>
         </div>
-      </div>
-    </section>
 
-    <section class="contact">
-      <h2>Contact me</h2>
-      <p><br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
-    </section>
+    </div>
+</section>
 
-    <footer class="site-footer">
-      <p>© Matt Sucato</p>
-    </footer>
-  </main>
+<section class="contact">
+    <h2>Contact me</h2>
+    <p><br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
+</section>
+
+<footer class="site-footer">
+    <p>&copy; Matt Sucato</p>
+</footer>
+</main>
 </body>
 </html>
