--- a/index.html
+++ b/index.html
@@ -1,75 +1,98 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8" />
-    <title>CSE 190: Matt Sucato</title>
-    <meta name="viewport" content="width=device-width-width,initial-scale=1" />
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>CSE 190: Matt Sucato</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
 <main class="container">
-<header class="site-header">
+  <header class="site-header">
     <h1>Matt Sucato</h1>
-</header>
+  </header>
 
-<section class="about">
+  <section class="about">
     <h2>About me</h2>
     <p>
-    My mission at the University of South Carolina is to do my best in every part of college.  
-    I want to work hard in my classes, get involved on campus, meet new people, and grow as a person.  
-    I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here.  
-    I want to leave USC proud of what I accomplished and ready for what comes next!
+      My mission at the University of South Carolina is to do my best in every part of college.
+      I want to work hard in my classes, get involved on campus, meet new people, and grow as a person.
+      I will stay focused on my goals, ask for help when I need it, and take advantage of the opportunities here.
+      I want to leave USC proud of what I accomplished and ready for what comes next!
     </p>
-</section>
+  </section>
 
-<section class="skills">
+  <section class="skills">
     <h2>Skills</h2>
 
     <!-- Resume links -->
     <div class="resume-links">
-        <a class="pdf-link" href="Files/Resume (5).pdf" target="_blank">Open PDF Resume</a>
-        <span class="divider">|</span>
-        <a class="html-link" href="resume.html">View HTML Resume</a>
+      <a class="pdf-link" href="Files/Resume (5).pdf" target="_blank">Open PDF Resume</a>
+      <span class="divider">|</span>
+      <a class="html-link" href="resume.html">View HTML Resume</a>
     </div>
-</section>
+  </section>
 
-<section class="projects">
+  <section class="projects">
     <h2>Highlighted projects</h2>
 
     <div class="project-gallery">
 
-        <div class="project">
-            <a href="Files/Screenshot 2025-10-13 122202.png">
-                <img src="Files/Screenshot 2025-10-13 122202.png" alt="Dining Hall problem statement">
-            </a>
-            <p>Dining Hall problem statement.</p>
-        </div>
+      <div class="project">
+        <a href="Files/Screenshot 2025-10-13 122202.png">
+          <img src="Files/Screenshot 2025-10-13 122202.png" alt="Dining Hall problem statement">
+        </a>
+        <p>Dining Hall problem statement.</p>
+      </div>
 
-        <div class="project">
-            <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
-                <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Affinity diagram">
-            </a>
-            <p>Affinity Diagram.</p>
-        </div>
+      <div class="project">
+        <a href="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png">
+          <img src="Files/Screen Shot 2025-11-17 at 12.29.26 PM.png" alt="Affinity diagram">
+        </a>
+        <p>Affinity Diagram.</p>
+      </div>
 
-        <div class="project">
-            <a href="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png">
-                <img src="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png" alt="Design sketches">
-            </a>
-            <p>Sketches of the design concept.</p>
-        </div>
+      <div class="project">
+        <a href="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png">
+          <img src="Files/Screen Shot 2025-11-18 at 6.23.36 PM.png" alt="Design sketches">
+        </a>
+        <p>Sketches of the design concept.</p>
+      </div>
 
     </div>
-</section>
+  </section>
 
-<section class="contact">
+  <!-- NEW: Code repositories section -->
+  <section class="code-repos">
+    <h2>Code repositories</h2>
+
+    <div class="repo-list">
+
+      <div class="repo-item">
+        <h3 class="repo-title"><a href="https://github.com/MattSucato/javaProject1" target="_blank" rel="noopener">javaProject1</a></h3>
+        <p class="repo-desc">Matrix adder program in Java — reads two matrices, validates dimensions and prints the summed matrix in a formatted layout.</p>
+      </div>
+
+      <div class="repo-item">
+        <h3 class="repo-title"><a href="https://github.com/MattSucato/JavaProject2" target="_blank" rel="noopener">JavaProject2</a></h3>
+        <p class="repo-desc">Ticket pricing and revenue calculator in Java — determines ticket prices from ages, prints daily revenue and ticket counts.</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="contact">
     <h2>Contact me</h2>
-    <p><br>Email: <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a></p>
-</section>
+    <p>
+      <br>Email:
+      <a href="mailto:msucato@email.sc.edu">msucato@email.sc.edu</a>
+    </p>
+  </section>
 
-<footer class="site-footer">
+  <footer class="site-footer">
     <p>&copy; Matt Sucato</p>
-</footer>
+  </footer>
 </main>
 </body>
 </html>
